--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -1,6 +1,6 @@
 substitutions:
   binary_1: "13" # yellow
-  binary_2: "27" # blue
+  leak_sensor: "27" # blue
 
 binary_sensor:
   - platform: gpio
@@ -16,13 +16,13 @@ binary_sensor:
       - delayed_on_off: 30ms
 
   - platform: gpio
-    id: binary_2
+    id: leak_sensor
     pin: 
-      number: ${binary_2}
+      number: ${leak_sensor}
       inverted: true
       mode:
         input: true
         pullup: true
-    name: "Binary 2"
+    name: "Leak Sensor"
     filters:
       - delayed_on_off: 30ms
