--- a/blueprints/automation/TheRealFalseReality/aquarium_ato_aquapi.yaml
+++ b/blueprints/automation/TheRealFalseReality/aquarium_ato_aquapi.yaml
@@ -58,7 +58,8 @@ blueprint:
       default: 
         hours: 6
       selector:
-        duration: {}
+        duration: 
+          enable_day: true  
     pump_max_time:
       name: Water Pump Max On Time
       description: Turn off water pump if exceeds a certain time to prevent over-flow
