--- a/common/temperature_dallas.yaml
+++ b/common/temperature_dallas.yaml
@@ -1,6 +1,7 @@
 substitutions:
   dallasPin: "16"
   update_temp: "60s"
+  sorting_group_temperature_weight: '5'
 
   # Calibration variables
   # 0C using Ice Water; 100C using Boiling Water  
@@ -9,6 +10,12 @@ substitutions:
   cal_100: "100.0"
   range_cool: "74"
   range_warm: "82"
+
+web_server:
+  sorting_groups:
+    - id: sorting_group_temperature
+      name: "Temperature"
+      sorting_weight: ${sorting_group_temperature_weight}
 
 # 18B20 sensor Pin
 one_wire:
@@ -33,6 +40,8 @@ sensor:
     on_value: 
       then:
         - component.update: temp_range
+    web_server:
+      sorting_group_id: sorting_group_temperature
 
   # Convert to Fahrenheit - Temp. 1
   - platform: template
@@ -41,6 +50,8 @@ sensor:
     id: temp_f
     lambda: |-
       return id(temp_1).state * 9 / 5 + 32;
+    web_server:
+      sorting_group_id: sorting_group_temperature
 
   # Calibration Temp. at 0C
   - platform: template
@@ -54,6 +65,8 @@ sensor:
     entity_category: "diagnostic"
     lambda: |-
       return {${cal_0}};
+    web_server:
+      sorting_group_id: sorting_group_temperature
 
   # Calibration Temp. at 100C
   - platform: template
@@ -67,6 +80,8 @@ sensor:
     entity_category: "diagnostic"
     lambda: |-
       return {${cal_100}};
+    web_server:
+      sorting_group_id: sorting_group_temperature
 
 binary_sensor:
   - platform: template
@@ -79,6 +94,8 @@ binary_sensor:
       } else {
         return false;
       }
+    web_server:
+      sorting_group_id: sorting_group_temperature
 
 text_sensor:
   # Temperature Range 1
@@ -100,6 +117,8 @@ text_sensor:
       else {
         return {"Unknown"};
       }  
+    web_server:
+      sorting_group_id: sorting_group_temperature
 
 number:
   # Temperature 1 when Cool
@@ -119,6 +138,8 @@ number:
     on_value: 
       then:
         - component.update: temp_range
+    web_server:
+      sorting_group_id: sorting_group_temperature
 
   # Temperature 1 when Warm
   - platform: template
@@ -137,3 +158,5 @@ number:
     on_value: 
       then:
         - component.update: temp_range
+    web_server:
+      sorting_group_id: sorting_group_temperature
