--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -8,6 +8,9 @@ substitutions:
   sdaPin: "21" # yellow/TX PMP-green
   sclPin: "22" # blue/RX PMP-white
 
+  sorting_group_diagnostic_weight: '900'
+  sorting_group_config_weight: '1000'
+
 esphome:
   min_version: 2024.6.0
   name: "${name}"
@@ -44,6 +47,13 @@ captive_portal:
 
 web_server:
   version: 3
+  sorting_groups:
+    - id: sorting_group_diagnostic
+      name: "Diagnostic"
+      sorting_weight: ${sorting_group_diagnostic_weight}
+    - id: sorting_group_config
+      name: "Configuration"
+      sorting_weight: ${sorting_group_config_weight}
   
 improv_serial:
 
@@ -66,6 +76,8 @@ sensor:
   # Internal Temp.
   - platform: internal_temperature
     name: "Internal Temperature"
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
   # Wifi Signal 
   - platform: wifi_signal # Reports the WiFi signal strength/RSSI in dB
@@ -74,6 +86,8 @@ sensor:
     id: wifi_signal_db
     update_interval: 60s
     entity_category: "diagnostic"
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
   # Wifi %
   - platform: copy # Reports the WiFi signal strength in %
@@ -83,15 +97,21 @@ sensor:
       - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
     unit_of_measurement: "%"
     entity_category: "diagnostic"
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
   # Uptime sensor
   - platform: uptime
     name: Uptime 
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
   # Internal Magnetic Sensor
   - platform: esp32_hall
     name: "ESP32 Hall Sensor"
     entity_category: "diagnostic"
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
   # of I2C devices connected
   - platform: template
@@ -112,11 +132,15 @@ sensor:
         }
       }
       return nDevices;
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
 binary_sensor:
   # API Status
   - platform: status
     name: "Status"
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
 text_sensor:
   # Hostname
@@ -127,6 +151,8 @@ text_sensor:
     lambda: |-
       return {"${name}"};
     entity_category: "diagnostic"
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
   # Wifi Info
   - platform: wifi_info
@@ -143,25 +169,35 @@ text_sensor:
     mac_address:
       name: Mac Address
       icon: mdi:chip
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
 button:
   # Soft Restart
   - platform: restart
     id: restart_button
     name: "Restart"
+    web_server:
+      sorting_group_id: sorting_group_config
 
   # Factory Reset
   - platform: factory_reset
     name: Factory Reset (USE WITH CAUTION)
     disabled_by_default: true
+    web_server:
+      sorting_group_id: sorting_group_config
 
   # Safe Mode Restart
   - platform: safe_mode
     name: "Restart in Safe Mode"
     id: restart_safe
+    web_server:
+      sorting_group_id: sorting_group_config
 
   # Shutdown
   - platform: shutdown
     name: "Shutdown"
     disabled_by_default: true
     id: shutdown_button
+    web_server:
+      sorting_group_id: sorting_group_config
